--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: yarn install
-      - run: yarn build
+      - run: yarn build-storybook
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
